third_party/move/move-compiler/tests/move_check/parser/constants_single_quote.move
address 0x42 {
module M {
    fun u(): u64 { 0 }
    const C13: u64 = ";
}
}
